add /api/course POST DELETE PUT, change course model to mutable
